Use AutoMap and option BookServices extend CategoryServices

--- a/BookApi_NoSwagger/BookApi/appsettings.json
+++ b/BookApi_NoSwagger/BookApi/appsettings.json
@@ -9,6 +9,11 @@
     "CB_ConnectionString": "mongodb://localhost:27017",
     "CB_DatabaseName": "bookStoreDb"
   },
+  "AppUserDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "bookStoreDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
