--- a/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka.csproj
+++ b/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
