--- a/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka/Properties/launchSettings.json
+++ b/ConsoleApp_DockerWithKafka/ConsoleApp_DockerWithKafka/Properties/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "Project",
       "ErrorString": "Error reading JObject from JsonReader. Current JsonReader item is not an object: Comment. Path '', line 10, position 3."
     },
-    "Project": {
-      "commandName": "Executable"
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
