--- a/_swagger/_swagger/appsettings.json
+++ b/_swagger/_swagger/appsettings.json
@@ -1,12 +1,7 @@
 {
   "Data": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "10.100.0.164",
     "DbName": "bookStoreDb"
-  },
-  "CategoryBookDatabaseSettings": {
-    "CategoryCollectionName": "CategoryBook",
-    "CB_ConnectionString": "mongodb://localhost:27017",
-    "CB_DatabaseName": "bookStoreDb"
   },
   "Logging": {
     "LogLevel": {
