--- a/_swagger/_swagger/appsettings.json
+++ b/_swagger/_swagger/appsettings.json
@@ -1,7 +1,17 @@
 {
+  "account": {
+    "name": "AccountElasticsearch",
+    "description": "A short description of the blog",
+    "owner": "Tai Thanh Tuan",
+    "productsPerPage": 50
+  },
   "Data": {
     "ConnectionString": "10.100.0.164",
     "DbName": "bookStoreDb"
+  },
+  "elasticsearch": {
+    "index": "accounts",
+    "url": "http://localhost:9200/"
   },
   "Logging": {
     "LogLevel": {
