--- a/_swagger/_swagger/Properties/launchSettings.json
+++ b/_swagger/_swagger/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "jsWebView2Debugging": false
     },
     "_swagger": {
       "commandName": "Project",
